WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199528
Fix accidental copies in NetworkLoadChecker.cpp
https://bugs.webkit.org/show_bug.cgi?id=199528
Summary
Fix accidental copies in NetworkLoadChecker.cpp
Michael Catanzaro
Reported
2019-07-05 12:58:36 PDT
Coverity noticed that we are copying a ResourceRequest and a ContentExtensionResultOrError in NetworkLoadChecker::checkRequest by mistake, when the intent was to move them as rvalue references.
Attachments
Patch
(3.37 KB, patch)
2019-07-05 13:00 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews211 for win-future
(14.08 MB, application/zip)
2019-07-05 15:59 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2019-07-05 13:00:42 PDT
Created
attachment 373527
[details]
Patch
EWS Watchlist
Comment 2
2019-07-05 15:59:35 PDT
Comment hidden (spam)
Comment on
attachment 373527
[details]
Patch
Attachment 373527
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/12670825
New failing tests: svg/text/textpath-reference-update.html
EWS Watchlist
Comment 3
2019-07-05 15:59:37 PDT
Comment hidden (spam)
Created
attachment 373550
[details]
Archive of layout-test-results from ews211 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews211 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Michael Catanzaro
Comment 4
2019-08-02 13:55:24 PDT
Ping owners.
youenn fablet
Comment 5
2019-09-12 03:15:42 PDT
Comment on
attachment 373527
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=373527&action=review
> Source/WebKit/ChangeLog:10 > + references.
I am not sure this is actually doing redundant copies but this looks better anyway.
Michael Catanzaro
Comment 6
2019-09-12 06:22:04 PDT
Comment on
attachment 373527
[details]
Patch I'm not sure if commit-queue will allow this....
WebKit Commit Bot
Comment 7
2019-09-12 06:53:05 PDT
Comment on
attachment 373527
[details]
Patch Clearing flags on attachment: 373527 Committed
r249806
: <
https://trac.webkit.org/changeset/249806
>
WebKit Commit Bot
Comment 8
2019-09-12 06:53:07 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2019-09-12 06:54:45 PDT
<
rdar://problem/55300242
>
Radar WebKit Bug Importer
Comment 10
2019-09-12 06:54:45 PDT
<
rdar://problem/55300243
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug