Fix accidental copies in NetworkLoadChecker.cpp https://bugs.webkit.org/show_bug.cgi?id=199528

Reviewed by Youenn Fablet.

Coverity noticed that we are copying a ResourceRequest and a ContentExtensionResultOrError
in NetworkLoadChecker::checkRequest by mistake, when the intent was to move them as rvalue
references.

* NetworkProcess/NetworkLoadChecker.cpp:
(WebKit::NetworkLoadChecker::checkRequest):
* NetworkProcess/NetworkLoadChecker.h:


Canonical link: https://commits.webkit.org/215362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249806 268f45cc-cd09-0410-ab3c-d52691b4dbfc